[package]
name = "pog-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
rand = "0.8.5"
secp256k1 = { version = "0.30.0", features = ["rand", "global-context", "recovery", "hashes"] }
sha3 = "0.10.8"
hex = "0.4"
num-bigint = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
chrono = "0.4"
petgraph = "0.7.1"
futures = "0.3"
log = "0.4"
simplelog = "0.11"
bls-signatures = "0.15.0"
lazy_static = "1.5.0"
dashmap = "5.4"