[package]
name = "pog-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "pog"
path = "src/lib.rs"

[[bin]]
name = "pog"
path = "src/main.rs"


[dependencies]
rand = "0.8.5"
secp256k1 = { version = "0.30.0", features = ["rand", "global-context", "recovery", "hashes"] }
sha3 = "0.10.8"
hex = "0.4"
num-bigint = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
chrono = "0.4"
petgraph = "0.7.1"
futures = "0.3"
log = "0.4"
simplelog = "0.11"
blst = "0.3"
lazy_static = "1.5.0"
dashmap = "6.1.0"
rand_distr = "0.4"
clap = { version = "4.0", features = ["derive"] }
lzma-rs = "0.3.0"
zstd = "0.13.0"
flate2 = "1.1.1"
base64 = "0.22.1"

[dev-dependencies]
env_logger = "0.11"
criterion = "0.5.1"
blst = "0.3"

[[bench]]
name = "path_tracing"
harness = false